--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -13,7 +13,8 @@
   "plugins": [
     "prettier",
     "react",
-    "react-hooks"
+    "react-hooks",
+    "jsx"
   ],
   "parser": "@babel/eslint-parser",
   "parserOptions": {
@@ -21,7 +22,8 @@
     "requireConfigFile": false,
     "ecmaFeatures": {
       "experimentalObjectRestSpread": true,
-      "impliedStrict": true
+      "impliedStrict": true,
+      "jsx": true
     }
   },
   "rules": {
