--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .js,.jsx ./src",
-    "lint:fix": "eslint --fix --ext .js,.jsx ./src"
+    "lint:fix": "eslint --fix --ext .js,.jsx ./src",
+    "all": "concurrently --kill-others -n server,frontend \"cd ../server && yarn start\" \"yarn start\""
   },
   "eslintConfig": {
     "extends": [
@@ -47,12 +48,14 @@
     "@mui/utils": "^5.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "apexcharts": "^3.28.3",
+    "axios": "^0.25.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.24.0",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "history": "^5.0.1",
+    "http-proxy-middleware": "^2.0.3",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
@@ -62,6 +65,8 @@
     "react-helmet-async": "^1.1.2",
     "react-router-dom": "^6.0.0-beta.4",
     "react-scripts": "^4.0.1",
+    "react-toastify": "^8.1.1",
+    "recoil": "^0.6.1",
     "simplebar": "^5.3.5",
     "simplebar-react": "^2.3.5",
     "web-vitals": "^2.1.0",
