--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "axios": "^0.25.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.24.0",
+    "dayjs": "^1.10.7",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
