--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.16.1",
