--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,8 +63,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
+    "react-number-format": "^4.9.1",
     "react-router-dom": "^6.0.0-beta.4",
     "react-scripts": "^4.0.1",
     "react-toastify": "^8.1.1",
