--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "@mui/lab": "^5.0.0-alpha.47",
     "@mui/material": "^5.0.0",
     "@mui/utils": "^5.0.0",
+    "@mui/x-data-grid": "^5.5.1",
     "@testing-library/jest-dom": "^5.14.1",
     "apexcharts": "^3.28.3",
     "axios": "^0.25.0",
@@ -66,6 +67,7 @@
     "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
+    "react-js-pagination": "^3.0.3",
     "react-number-format": "^4.9.1",
     "react-router-dom": "^6.0.0-beta.4",
     "react-scripts": "^4.0.1",
