--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "esm": "^3.2.25",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
